# pygpgme

./: NEWS  pyproject.toml  setup.py
.github/workflows/: deploy.yaml  test.yaml
lib/: gpgme.c  pygpgme-constants.c  pygpgme-context.c  pygpgme-data.c  pygpgme-engine-info.c  pygpgme-error.c  pygpgme-genkey.c  pygpgme-import.c  pygpgme-key.c  pygpgme-keyiter.c  pygpgme-signature.c  pygpgme.h
tests/: test_import.py  test_multiple_interpreters.py
